Add more projects to the page with addProjects module

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -47,6 +47,7 @@ img.project-preview {
   height: 300px;
   border: 1px solid black;
   object-fit: cover;
+  object-position: top left;
 }
 
 div.project-links {
