--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,8 +7,104 @@
 :root {
   --common-padding: 8px;
   --common-margin: 16px;
+  --min-margin: calc((var(--common-margin)) * 0.5);
+  --icon-size: 24px;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+body > * {
+  max-width: 1024px;
+  width: 100%;
+  border: 1px solid orangered;
+}
+
+/* nav bar (start)*/
+nav {
+  padding: var(--common-padding);
+  border: 1px solid green;
+}
+
+ul.page-links {
+  display: flex;
+  gap: var(--common-margin);
+  justify-content: end;
+  align-items: center;
+}
+
+ul.page-links li {
+  list-style: none;
+}
+
+ul.page-links a {
+  text-decoration: none;
+}
+
+/* nav bar (end)*/
+
+/* Header (start) */
+
+header {
+  display: grid;
+  position: relative;
+  grid-template-columns: max-content minmax(150px, 500px);
+  grid-template-rows: 1fr max-content;
+  padding: var(--common-padding);
+  grid-template-areas: 
+    "name picture"
+    "title picture";
+
+  gap: var(--min-margin);
+  justify-content: start;
+
+  margin: var(--common-margin) 0;
+}
+
+img.profile-pic {
+  grid-area: picture;
+  width: 100%;
+}
+
+h1.my-name {
+  grid-area: name;
+
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  flex-wrap: nowrap;
+}
+
+h2.my-title {
+  grid-area: title;
+  font-size: 1rem;
+}
+
+/* Header (end) */
+
+/* Main common (start) */
+main section  {
+  margin: var(--common-margin) 0;
+  padding: var(--common-padding);
+}
+
+section h3 {
+  font-size: 1.5rem;
+  margin-bottom: var(--common-margin);
+}
+
+/* Main common (end) */
+
+/* About section (start) */
+section#about {
+  padding: var(--common-padding);
+  display: grid;
+  gap: var(--min-margin);
+}
 
 div.profile-links {
   width: max-content;
@@ -16,6 +112,11 @@ div.profile-links {
   justify-content: center;
   align-items: center;
   gap: var(--common-margin);
+  justify-self: end;
+}
+
+div.profile-links svg {
+  width: var(--icon-size);
 }
 
 div.profile-links a {
@@ -26,10 +127,32 @@ div.profile-links a {
   width: max-content;
 }
 
+/* About section (end) */
+
+
+/* Project section (start) */
+section#projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: var(--common-padding);
+}
+
+div#projects-main {
+  display: grid;
+  gap: var(--common-margin);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 300px));
+  width: 100%;
+  justify-content: center;
+}
 
 div.project-cont {
   border: 1px solid black;
+  padding: var(--common-padding);
+
   display: grid;
+  gap: var(--min-margin);
   grid-template-columns: 1fr max-content;
   grid-template-areas: 
     "preview preview"
@@ -44,7 +167,7 @@ h2.project-title {
 img.project-preview {
   grid-area: preview;
   width: 100%;
-  height: 300px;
+  /* height: 300px; */
   border: 1px solid black;
   object-fit: cover;
   object-position: top left;
@@ -58,11 +181,11 @@ div.project-links {
   gap: 8px;
 }
 
-a.repo-link, a.live-link {
+div.project-links a{
   display: flex;
   justify-content: center;
-  width: 32px;  
-  height: 32px;
+  width: var(--icon-size);  
+  height: var(--icon-size); 
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -79,3 +202,50 @@ a.live-link {
 p.project-desc {
   grid-area: desc;
 }
+
+/* Project section (end) */
+
+/* Footer (start) */
+  footer {
+    margin-bottom: 100px;
+  }
+
+  
+
+/* Contact (start)) */
+section#contact {
+  padding: var(--common-padding);
+  /* display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  gap: var(--min-margin); */
+}
+
+section#contact p {
+  margin: var(--min-margin) 0;
+}
+
+p.address {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+p.tel, p.email {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: var(--min-margin);
+}
+
+section#contact span svg {
+  width: var(--icon-size)
+}
+
+
+
+/* Contact (end)) */
+
+/* Footer (end) */
