--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,12 @@
+/* Roboto */
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto&display=swap');
+
+/* Archivo Black*/
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
+
+/* Chakra Petch  */
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Chakra+Petch&family=Roboto&display=swap');
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -9,79 +18,178 @@
   --common-margin: 16px;
   --min-margin: calc((var(--common-margin)) * 0.5);
   --icon-size: 24px;
+
+  --nav-height: 40px;
+
+  --off-white: #F8F6F6;
+  --yellow: #F5D061;
+  --red: #CF4647;
+  --gray: #2A363B;
+
+  --common-font: "Roboto", sans-serif;
+  --title-font: "Archivo Black", sans-serif;
+  --header-font: "Chakra Petch", sans-serif;
+}
+
+p, a, span {
+  font-family: var(--common-font);
 }
 
 body {
   display: flex;
+  position: relative;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+  height: 100%;
+  width: 100%;    
+
+  background-image: url('../assets/bg.jpg');
+  background-position: center;
+  background-size: cover;
+  filter: brightness(0.5);
+}
+
 body > * {
   max-width: 1024px;
   width: 100%;
-  border: 1px solid orangered;
+  /* border: 1px solid orangered; */
 }
 
 /* nav bar (start)*/
 nav {
-  padding: var(--common-padding);
-  border: 1px solid green;
+  height: var(--nav-height);
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  background-color: rgba(42, 54, 59, 0.8);
+  /* overflow: hidden;
+  height: 0;
+  padding: 0; */
+}
+
+html {
+  scroll-behavior: smooth;
+  /* scroll-padding: calc(var(--common-padding) * 2); */
+  scroll-padding: calc(var(--nav-height) * 1.5);
 }
 
 ul.page-links {
-  display: flex;
-  gap: var(--common-margin);
+  display: grid;
+  grid-template-columns: 1fr repeat(3, max-content);
   justify-content: end;
   align-items: center;
+  height: 100%;
+}
+
+li.page-logo {
+  justify-self: start;
 }
 
 ul.page-links li {
   list-style: none;
+  padding: var(--common-padding);
+  padding-bottom: 0;
+  text-align: center;
+  transition: 
+    filter 0.2s ease-in-out,  
+    border-width 0.2s ease-in-out,
+    background-color 0.2s ease-in-out;
+  height: 100%;
+
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  
 }
 
 ul.page-links a {
+  color: var(--off-white);
   text-decoration: none;
+}
+
+ul.page-links a:visited {
+  color: var(--off-white);
+}
+
+ul.page-links li:has(a:active) {
+  filter: brightness(0.5);
+} 
+
+ul.page-links li:has(a:hover) {
+  background-color: var(--gray);
+  border-bottom: 3px solid var(--red);
+} 
+
+section#about, section#project, section#contact {
+  scroll-behavior: smooth;
 }
 
 /* nav bar (end)*/
 
 /* Header (start) */
-
 header {
   display: grid;
   position: relative;
-  grid-template-columns: max-content minmax(150px, 500px);
+  grid-template-columns: 30% 1fr;
   grid-template-rows: 1fr max-content;
-  padding: var(--common-padding);
+  gap: var(--min-margin);
+  justify-content: start;
   grid-template-areas: 
     "name picture"
     "title picture";
 
-  gap: var(--min-margin);
-  justify-content: start;
-
-  margin: var(--common-margin) 0;
+  /* margin: calc(var(--nav-height) * 1.5) 0 var(--common-margin) 0; */
+  margin-top: var(--nav-height);
+  padding: calc(var(--common-padding) * 2) var(--common-padding);
+  background-color: var(--yellow);
+  height: 40vh;
+  min-height: max-content;
 }
 
 img.profile-pic {
-  grid-area: picture;
+  grid-area: picture; 
   width: 100%;
-}
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
+} 
 
 h1.my-name {
   grid-area: name;
+  text-wrap: nowrap;
 
   display: flex;
   flex-direction: column;
   align-items: start;
   flex-wrap: nowrap;
+  padding: var(--common-padding);
+  font-family: var(--title-font);
+  color: var(--off-white);
+  text-shadow: 0 0 5px black;
+  margin-top: var(--common-margin);
+}
+
+h1.my-name span {
+  font-family: var(--title-font);
 }
 
 h2.my-title {
   grid-area: title;
   font-size: 1rem;
+  padding: var(--common-padding);
+  border-bottom: 5px solid var(--red);
+  max-width: max-content;
+  font-family: var(--header-font);
 }
 
 /* Header (end) */
@@ -93,17 +201,28 @@ main section  {
 }
 
 section h3 {
-  font-size: 1.5rem;
+  font-size: 2rem;
+  font-family: var(--header-font);
   margin-bottom: var(--common-margin);
+  color: var(--off-white);
+  padding: 0 var(--common-padding);
 }
 
 /* Main common (end) */
 
 /* About section (start) */
 section#about {
-  padding: var(--common-padding);
+  margin: 0;
+  padding: calc(var(--common-padding) * 2) var(--common-padding);
   display: grid;
   gap: var(--min-margin);
+  background-color: rgba(42, 54, 59, 0.8);
+}
+
+section#about p {
+  color: var(--off-white);
+  text-align: justify;
+  padding: 0 var(--common-padding);
 }
 
 div.profile-links {
@@ -117,6 +236,10 @@ div.profile-links {
 
 div.profile-links svg {
   width: var(--icon-size);
+}
+
+div.profile-links svg.github-icon path {
+  fill: var(--off-white);
 }
 
 div.profile-links a {
@@ -148,8 +271,11 @@ div#projects-main {
 }
 
 div.project-cont {
-  border: 1px solid black;
-  padding: var(--common-padding);
+  border: 2px solid var(--yellow);
+  border-radius: 5px;
+  background-color: var(--gray);
+  padding: calc(var(--common-padding) * 2);
+  box-shadow: 0 5px 5px 2px rgba(42, 54, 59, 0.8);
 
   display: grid;
   gap: var(--min-margin);
@@ -162,13 +288,18 @@ div.project-cont {
 
 h2.project-title {
   grid-area: title;
+  font-family: var(--header-font);
+  color: var(--yellow);
+}
+
+div.project-cont p {
+  color: var(--off-white);
 }
 
 img.project-preview {
   grid-area: preview;
+  border-bottom: 5px solid var(--red);
   width: 100%;
-  /* height: 300px; */
-  border: 1px solid black;
   object-fit: cover;
   object-position: top left;
 }
@@ -178,25 +309,26 @@ div.project-links {
   width: max-content;
   display: flex;
   justify-content: center;
-  gap: 8px;
+  align-items: center;
+  gap: var(--common-margin);
 }
 
 div.project-links a{
   display: flex;
   justify-content: center;
-  width: var(--icon-size);  
-  height: var(--icon-size); 
+  width: var(--icon-size);
+  height: var(--icon-size);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
 }
 
 a.repo-link {
-  background-image: url(../assets/open-repo.svg);
+  background-image: url(../assets/open-repo-2.svg);
 }
 
 a.live-link {
-  background-image: url(../assets/open-live.svg);
+  background-image: url(../assets/open-live-2.svg);
 }
 
 p.project-desc {
@@ -207,30 +339,51 @@ p.project-desc {
 
 /* Footer (start) */
   footer {
-    margin-bottom: 100px;
+    margin: var(--common-margin) 0 0 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: max-content 30vh;
+    grid-template-areas: 
+      "contact-sec"
+      "display-img";
   }
 
   
-
 /* Contact (start)) */
 section#contact {
+  grid-area: contact-sec;
   padding: var(--common-padding);
-  /* display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: center;
-  gap: var(--min-margin); */
+  background-color: rgba(207, 70, 71, 0.8);
+  border-top: 1px solid var(--yellow);
+}
+
+div.detail-cont {
+  padding: 0 var(--common-padding);
+}
+
+section#contact h3 {
+  color: var(--yellow);
 }
 
 section#contact p {
   margin: var(--min-margin) 0;
+  color: white;
+  text-shadow: 0 0 2px var(--gray);
 }
 
 p.address {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: center;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: max-content 1fr;
+  justify-content: start;
+  align-items: center;
+  gap: var(--min-margin);
+}
+
+p.address span.pin-icon {
+  grid-template-columns: 1 / 2;
+  grid-row: 1 / 5;
+  align-self: start;
 }
 
 p.tel, p.email {
@@ -241,9 +394,28 @@ p.tel, p.email {
 }
 
 section#contact span svg {
-  width: var(--icon-size)
+  width: var(--icon-size);
+  fill: white;
 }
 
+section#contact span svg path {
+  fill: var(--yellow);
+}
+
+section#contact div.profile-links {
+  padding: 0 var(--common-padding);
+  margin: var(--common-margin) 0;
+}
+
+div.footer-img {
+  grid-area: display-img;
+  width: 100%;
+  height: 100%;
+  background-image: url(../assets/footer-display.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
 
 /* Contact (end)) */
