--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -532,7 +532,7 @@ p.address {
 }
 
 p.address span.pin-icon {
-  grid-template-columns: 1 / 2;
+  grid-column: 1 / 2;
   grid-row: 1 / 5;
   align-self: start;
 }
@@ -546,7 +546,6 @@ p.tel, p.email {
 
 section#contact span svg {
   width: var(--icon-size);
-  fill: white;
 }
 
 section#contact span svg path {
